fix for one-pixel shift in filter menus (#167)

--- a/source/styles/components/_filters.scss
+++ b/source/styles/components/_filters.scss
@@ -3,6 +3,10 @@ $filter-padding-horizontal: $padding-base-horizontal !default;
 $filter-max-depth: 2 !default;
 $filter-control-size: 20px !default;
 
+.box > .filter:only-child {
+  margin-bottom: -1px;
+}
+
 .filter-heading {
   margin: 0;
   padding: 0;
@@ -25,7 +29,7 @@ $filter-control-size: 20px !default;
   display: block;
   font-weight: normal;
   line-height: $line-height-base;
-  margin: -1px 0;
+  margin: -1px 0 0;
   overflow: hidden;
   padding:
     $filter-padding-vertical
